templates/akash-hostname-operator_template.yaml
---
# Source: akash-hostname-operator/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: operator-hostname
  labels:
    app.kubernetes.io/name: hostname
    app.kubernetes.io/instance: hostname-service
    app.kubernetes.io/component: operator
    app.kubernetes.io/part-of: provider
spec:
  selector:
    app.kubernetes.io/name: hostname
    app.kubernetes.io/instance: hostname-service
    app.kubernetes.io/component: operator
    app.kubernetes.io/part-of: provider
  ports:
    - name: rest
      port: 8080
      targetPort: rest
---
# Source: akash-hostname-operator/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: operator-hostname
  labels:
    app.kubernetes.io/name: hostname
    app.kubernetes.io/instance: hostname-service
    app.kubernetes.io/component: operator
    app.kubernetes.io/part-of: provider
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: hostname
      app.kubernetes.io/instance: hostname-service
      app.kubernetes.io/component: operator
      app.kubernetes.io/part-of: provider
  replicas: 1
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hostname
        app.kubernetes.io/instance: hostname-service
        app.kubernetes.io/component: operator
        app.kubernetes.io/part-of: provider
    spec:
      serviceAccountName: operator-hostname
      containers:
        - name: operator-hostname
          image: "ghcr.io/akash-network/provider:0.6.1"
          imagePullPolicy: IfNotPresent
          args: ["provider-services", "operator", "hostname"]
          ports:
            - name: rest
              containerPort: 8080
---
# Source: akash-hostname-operator/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: akash-hostname-operator
  annotations:
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"

spec:
  ingressClassName: "akash-ingress-class"
  rules:
    - host: akash-hostname-operator.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: akash-hostname-operator
                port:
                  name: status
